	Restructured the while loop to work properly.
	* il_convert.c (iConvertPalette): Changed references of iCurImage to Image.
	* il_gif.c (GifGetData): Added DataPtr and changed line 636 to use Data instead of Image->Data.
	* il_gif.c (iGetPalette / GetImages): Changed to better deal with local palettes.
	
2009-01-10 Matěj Týč <bubla@sf.net>
	* m4/devil-definitions.m4, m4/devil-reports.m4: Added a report saying
	what libraries were linked with DevIL (should be helpful to packagers
	who need to know DevIL dependencies)
	* il_endian.h (iGwapUShort/iSwapUInt): Finished fixing bug #2023453
	(inline GCC asm, there was a typo left)
	* src_IL/src/il_tiff.c (ilSaveTiff): Fixed a typo that was causing
	conflicting declarations error
	* configure.ac:264: Added IL_NO_WBMP since the Wbmp loading functions
	that are referenced, but not implemented, caused linking errors

2009-01-11 Denton Woods <doomwiz@users.sf.net>
	* MSVC9 Unicode projects: Updated to work better in 64-bit Windows.
	* il_vtf.c: Removed commented lines 238-242.
	* Created application to copy DLL files to the System32 directory.
	
2009-01-12 Denton Woods <doomwiz@users.sf.net>
	* ilut_directx9.c: Cleared up formatting some.

2009-01-13 Denton Woods <doomwiz@users.sf.net>
	* Converted source repository to SVN from CVS.

2009-01-15 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c / il.h: Added ilClampNTSC function.
	* il_squish.cpp: Added file.
	* il_dds-save.c: Added line 688.
	* il_states.c: Added lines for libsquish support.
	* il_dds-save.c (Compress): Added libsquish compression.
	* il_io.c (ilDetermineTypeF/L and ilIsValid/F/L): Added VTF and SUN.
	* il_io.c (ilIsValidF/L): Added TIF
	* il_jp2.c:131-137:Added these lines to take care of erroneous error generated
	by JasPer's buffering.
	* il_jp2.c: Added functions to save JPEG 2000 images.
	* il_utility.c (ilGetBppFormat): Added IL_ALPHA.
	* il_jp2.c (iLoadJp2Internal): Added 1 and 2 channel format loading.
	