@@ -31,12 +31,12 @@
 #include <IL/il.h>
 #include <IL/ilu.h>
 #include <IL/ilut.h>
-//#include <sdl.h>
+#include <sdl.h>
 #include "resource.h"
 #include <stdlib.h>
 #include <wchar.h>
 
-//#pragma comment(lib, "sdl.lib")
+#pragma comment(lib, "sdl.lib")
 //#pragma comment(lib, "sdlmain.lib")
 //#pragma comment(lib, "colorpicker.lib")
 
@@ -122,9 +122,9 @@ int APIENTRY WinMain(HINSTANCE hInst, HINSTANCE hPrevInstance, LPSTR lpCmdLine, 
 	if (HWnd == NULL)
 		return FALSE;
 
-	//if (SDL_Init(SDL_INIT_TIMER) < 0)
-	//	return FALSE;
-	//atexit(SDL_Quit);
+	if (SDL_Init(SDL_INIT_TIMER) < 0)
+		return FALSE;
+	atexit(SDL_Quit);
 
 	// Display the window
 	ShowWindow(HWnd, nCmdShow);
@@ -603,14 +603,13 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
 					ilGenImages(1, Undos);
 					ilBindImage(Undos[0]);
 
-					//last_elapsed = SDL_GetTicks();
+					last_elapsed = SDL_GetTicks();
 					if (!ilLoadImage(OpenFileName))
 						return (0L);
 					CurImage = 0;
-					//cur_elapsed = SDL_GetTicks();
-					//elapsed = cur_elapsed - last_elapsed;
-					//last_elapsed = cur_elapsed;
-					elapsed = 0;
+					cur_elapsed = SDL_GetTicks();
+					elapsed = cur_elapsed - last_elapsed;
+					last_elapsed = cur_elapsed;
 
 					//ilConvertImage(IL_RGBA, IL_UNSIGNED_BYTE);
 					ilEnable(IL_NVIDIA_COMPRESS);
@@ -623,7 +622,7 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
 					CreateGDI();
 
 					wsprintf(CurFileName, L"%s", OpenFileName);
-					wsprintf(NewTitle, L"%s - %s:  %g ms", TITLE, OpenFileName, elapsed);
+					wsprintf(NewTitle, L"%s - %s:  %u ms", TITLE, OpenFileName, (unsigned int)elapsed);
 					SetWindowText(hWnd, NewTitle);
 
 					return (0L);
@@ -666,11 +665,17 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
 						return (0L);
 
 					ilEnable(IL_FILE_OVERWRITE);
-					ilBindImage(Undos[0]);  //@TODO: Do better here...
+					//ilBindImage(Undos[0]);  //@TODO: Do better here...
+
+					last_elapsed = SDL_GetTicks();
 					ilSaveImage(SaveFileName);
 
+					cur_elapsed = SDL_GetTicks();
+					elapsed = cur_elapsed - last_elapsed;
+					last_elapsed = cur_elapsed;
+
 					wsprintf(CurFileName, L"%s", SaveFileName);
-					wsprintf(NewTitle, L"%s - %s", TITLE, SaveFileName);
+					wsprintf(NewTitle, L"%s - %s:  %u ms", TITLE, SaveFileName, (unsigned int)elapsed);
 					SetWindowText(hWnd, NewTitle);
 
 					return (0L);
