@@ -292,6 +292,9 @@ ILboolean ilSaveHdrL(void *Lump, ILuint Size);
 ILboolean ilLoadIcon(ILconst_string FileName);
 ILboolean ilLoadIconF(ILHANDLE File);
 ILboolean ilLoadIconL(const void *Lump, ILuint Size);
+ILboolean ilIsValidIcns(ILconst_string FileName);
+ILboolean ilIsValidIcnsF(ILHANDLE File);
+ILboolean ilIsValidIcnsL(const void *Lump, ILuint Size);
 ILboolean ilLoadIcns(ILconst_string FileName);
 ILboolean ilLoadIcnsF(ILHANDLE File);
 ILboolean ilLoadIcnsL(const void *Lump, ILuint Size);
